--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,9 +46,6 @@ bind-key -r L resize-pane -R 5
 # 256色端末を使用する
 set -g default-terminal "screen-256color"
 
-# powerline
-run-shell "powerline-daemon -q"
-
 # アクティブなウィンドウを目立たせる
 setw -g window-status-current-fg white
 setw -g window-status-current-bg red
@@ -72,17 +69,62 @@ set -g status-justify centre
 setw -g monitor-activity on
 set -g visual-activity on
 
-# コピーモードを設定する
+
+# コピーモード
 ## viのキーバインドを使用する
 setw -g mode-keys vi
-## クリップボード共有を有効にする
-
+## vim <=> tmux 間でクリップボード利用を可能にする
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+## Prefix+v でコピーモード開始
+bind-key v copy-mode \; display "Copy mode!"
 ## コピーモードの操作をvi風に設定する
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
+## Prefix+p でペースト
+bind-key p paste-buffer
+## Esc キーでコピーの反転を解除（コピーモードは抜けない）
+bind-key -t vi-copy Escape clear-selection
+## Ctrl-c キーでコピーの反転を解除し、コピーモードから抜ける
+bind-key -t vi-copy C-c　　 cancel
+## コピーモード中（Prefix+v 後）C-v で矩形選択開始
+bind-key -t vi-copy C-v 　　rectangle-toggle
+## 1行選択
+bind-key -t vi-copy V 　　　select-line
+## Vi モード中に Ctrl-a で行頭に（Emacs ライク）
+bind-key -t vi-copy C-a 　　start-of-line
+## Vi モード中に Ctrl-e で行末に（Emacs ライク）
+bind-key -t vi-copy C-e 　　end-of-line
+## 単語の最初の1文字に移動
+bind-key -t vi-copy w 　　　next-word
+## 単語の最後の1文字に移動
+bind-key -t vi-copy e 　　　next-word-end
+## w の逆の動き back
+bind-key -t vi-copy b 　　　previous-word
+## 画面上に映る最上行に移動
+bind-key -t vi-copy g 　　　top-line
+## 画面上に映る最下行に移動
+bind-key -t vi-copy G 　　　bottom-line
+## 前方検索
+bind-key -t vi-copy / 　　　search-forward
+## 後方検索
+bind-key -t vi-copy ? 　　　search-backward
+## ページスクロール
+bind-key -t vi-copy C-n　　 page-up
+bind-key -t vi-copy C-f 　　page-down
+## ページ送り
+bind-key -t vi-copy C-u 　　scroll-up
+bind-key -t vi-copy C-d 　　scroll-down
+
 
 # マウスの設定
 set-option -g mouse on
+
+# tmuxの設定
+set -g terminal-overrides 'xterm:colors=256'
+run-shell "powerline-daemon -q"
+source "/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
+
 
 set -g @shell_mode 'vi'
 set -g @yank_selection 'primary'
