--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,22 @@
+# 256色端末を使用する
+set -g default-terminal "screen-256color"
+set -g terminal-overrides 'xterm:colors=256'
+#power-lineの設定
+run-shell "powerline-daemon -q"
+
+# プラグイン
+set -g @shell_mode 'vi'
+set -g @yank_selection 'primary'
+# tpm
+## List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
+
+## Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
 # syntaxを有効
 set -g default-terminal "xterm"
 
@@ -11,13 +30,10 @@ bind r source-file ~/.tmux.conf \; display "Configuration Reloaded!"
 
 # キーストロークのディレイを減らす
 set -sg escape-time 1
-
 # ウィンドウのインデックスを1から始める
 set -g base-index 1
-
 # ペインのインデックスを1から始める
 setw -g pane-base-index 1
-
 # マウス操作を有効にする
 setw -g mouse on
 
@@ -43,32 +59,19 @@ bind-key -r J resize-pane -D 5
 bind-key -r K resize-pane -U 5
 bind-key -r L resize-pane -R 5
 
-# 256色端末を使用する
-set -g default-terminal "screen-256color"
 
 # アクティブなウィンドウを目立たせる
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
+#setw -g window-status-current-fg white
+#setw -g window-status-current-bg red
+#setw -g window-status-current-attr bright
 
 # アクティブなペインを目立たせる
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
+#set -g pane-active-border-fg white
+#set -g pane-active-border-bg yellow
 
-# ステータスバーを設定する
-## 左パネルを設定する
-set -g status-left-length 40
-set -g status-left "#[fg=gray]Session: #S #[fg=blue]#I #[fg=red]#P"
-## 右パネルを設定する
-set -g status-right "#[fg=gray][%Y-%m-%d(%a) %H:%M]"
-## リフレッシュの間隔を設定する(デフォルト 15秒)
-set -g status-interval 60
-## ウィンドウリストの位置を中心寄せにする
-set -g status-justify centre
 ## ヴィジュアルノーティフィケーションを有効にする
 setw -g monitor-activity on
 set -g visual-activity on
-
 
 # コピーモード
 ## viのキーバインドを使用する
@@ -84,56 +87,56 @@ bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
 ## Prefix+p でペースト
 bind-key p paste-buffer
 ## Esc キーでコピーの反転を解除（コピーモードは抜けない）
-bind-key -t vi-copy Escape clear-selection
+#bind-key -t vi-copy Escape clear-selection
 ## Ctrl-c キーでコピーの反転を解除し、コピーモードから抜ける
-bind-key -t vi-copy C-c　　 cancel
+#bind-key -t vi-copy C-c　　 cancel
 ## コピーモード中（Prefix+v 後）C-v で矩形選択開始
-bind-key -t vi-copy C-v 　　rectangle-toggle
+#bind-key -t vi-copy C-v 　　rectangle-toggle
 ## 1行選択
-bind-key -t vi-copy V 　　　select-line
+#bind-key -t vi-copy V 　　　select-line
 ## Vi モード中に Ctrl-a で行頭に（Emacs ライク）
-bind-key -t vi-copy C-a 　　start-of-line
+#bind-key -t vi-copy C-a 　　start-of-line
 ## Vi モード中に Ctrl-e で行末に（Emacs ライク）
-bind-key -t vi-copy C-e 　　end-of-line
+#bind-key -t vi-copy C-e 　　end-of-line
 ## 単語の最初の1文字に移動
-bind-key -t vi-copy w 　　　next-word
+#bind-key -t vi-copy w 　　　next-word
 ## 単語の最後の1文字に移動
-bind-key -t vi-copy e 　　　next-word-end
+#bind-key -t vi-copy e 　　　next-word-end
 ## w の逆の動き back
-bind-key -t vi-copy b 　　　previous-word
+#bind-key -t vi-copy b 　　　previous-word
 ## 画面上に映る最上行に移動
-bind-key -t vi-copy g 　　　top-line
+#bind-key -t vi-copy g 　　　top-line
 ## 画面上に映る最下行に移動
-bind-key -t vi-copy G 　　　bottom-line
+#bind-key -t vi-copy G 　　　bottom-line
 ## 前方検索
-bind-key -t vi-copy / 　　　search-forward
+#bind-key -t vi-copy / 　　　search-forward
 ## 後方検索
-bind-key -t vi-copy ? 　　　search-backward
+#bind-key -t vi-copy ? 　　　search-backward
 ## ページスクロール
-bind-key -t vi-copy C-n　　 page-up
-bind-key -t vi-copy C-f 　　page-down
+#bind-key -t vi-copy C-n　　 page-up
+#bind-key -t vi-copy C-f 　　page-down
 ## ページ送り
-bind-key -t vi-copy C-u 　　scroll-up
-bind-key -t vi-copy C-d 　　scroll-down
+#bind-key -t vi-copy C-u 　　scroll-up
+#bind-key -t vi-copy C-d 　　scroll-down
 
+## utf8を有効に
+set -g status on
+#set -g status-utf8 on
+set -g status-interval 2
+## ウインドウリストの位置
+set -g status-justify 'left'
+### 左部分
+set -g status-left-length 100
+### 右部分
+set -g status-right-length 150
+set -g status-right "[%Y-%m-%d(%a) %H:%M]"
+### ウインドウ
+set -g window-status-format "#[fg=colour244,bg=colour234]  #I #[fg=colour240] #[default]#W "
+set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour234,nobold]"
 
 # マウスの設定
 set-option -g mouse on
 
-# tmuxの設定
-set -g terminal-overrides 'xterm:colors=256'
-run-shell "powerline-daemon -q"
-source "/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
 
-
-set -g @shell_mode 'vi'
-set -g @yank_selection 'primary'
-
-# tpm
-## List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-
-## Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# iTerm連携
+setw -g aggressive-resize off
