--- a/.gitconfig
+++ b/.gitconfig
@@ -16,6 +16,9 @@
   d = "!git branch --merged|egrep -v '\\*|develop|master'|xargs git branch -d"
   modified = diff --diff-filter=M
   deleted = diff --diff-filter=D
+  diff = diff --color | diff-so-fancy
+  sorttime = "!git for-each-ref --sort='-authordate:iso8601' --format=' %(authordate:iso8601)%09%(refname)' refs/heads"
+  alias = !"if test -z $1; then loop=; for k in `git config --get-regexp ^alias\\. | sort | sed -e 's/^alias\\.\\(\\S*\\).*/\\1/g'`; do echo -n $k; loop="${loop}1"; if test ${#loop} -lt 5; then echo -n '\t'; else echo; loop=; fi; done; exit; fi; git config --list | grep ^alias\\.$1= | sed -e s/^alias\\.//; exit;"
 [filter "media"]
 	clean = !git-media-clean %f
 	smudge = !git-media-smudge %f
