--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 set -g default-terminal "screen-256color"
 set -g terminal-overrides 'xterm:colors=256'
 #power-lineの設定
-run-shell "powerline-daemon -q"
+#run-shell "powerline-daemon -q"
 
 # プラグイン
 set -g @shell_mode 'vi'
@@ -76,12 +76,12 @@ set -g visual-activity on
 # コピーモード
 ## viのキーバインドを使用する
 setw -g mode-keys vi
-## vim <=> tmux 間でクリップボード利用を可能にする
-set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 ## Prefix+v でコピーモード開始
 bind-key v copy-mode \; display "Copy mode!"
+## vim <=> tmux 間でクリップボード利用を可能にする
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 ## コピーモードの操作をvi風に設定する
-unbind -t vi-copy Enter
+unbind   -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
 ## Prefix+p でペースト
