--- a/.gitconfig
+++ b/.gitconfig
@@ -18,6 +18,19 @@
   deleted = diff --diff-filter=D
   diff = diff --color | diff-so-fancy
   sorttime = "!git for-each-ref --sort='-authordate:iso8601' --format=' %(authordate:iso8601)%09%(refname)' refs/heads"
+  # TODOコメント表示
+  todo = !"f() { for fn in `git diff --name-only master`;do if [ -f $fn ];then git grep -i todo $fn;fi done };f"
+  # FIXMEコメント表示
+  fixme = !"f() { for fn in `git diff --name-only master`;do if [ -f $fn ];then git grep -i fixme $fn;fi done };f"
+  # 最近コミットしたブランチを表示
+  recent = for-each-ref --format='%(refname:short)' --sort=-committerdate refs/heads
+  # カレントブランチ
+  current-branch = rev-parse --abbrev-ref HEAD
+  # pull req ブランチを手元にpull
+  fetch-pulls = fetch origin +refs/pull/*:refs/remotes/pull/*
+  # pullする前に変更を調べる
+  pull-dry-run  = !"git fetch origin; B=$(git rev-parse --abbrev-ref HEAD); git diff --stat --summary ${B}..origin/${B}"
+  # alias一覧 TODO:動いてない
   alias = !"if test -z $1; then loop=; for k in `git config --get-regexp ^alias\\. | sort | sed -e 's/^alias\\.\\(\\S*\\).*/\\1/g'`; do echo -n $k; loop="${loop}1"; if test ${#loop} -lt 5; then echo -n '\t'; else echo; loop=; fi; done; exit; fi; git config --list | grep ^alias\\.$1= | sed -e s/^alias\\.//; exit;"
 [filter "media"]
 	clean = !git-media-clean %f
