[update] 動作おかしいので一旦コメントアウト

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -83,9 +83,10 @@ bind-key v copy-mode \; display "Copy mode!"
 ## vim <=> tmux 間でクリップボード利用を可能にする
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 ## コピーモードの操作をvi風に設定する
-unbind   -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
+## : brew install reattach-to-user-namespace
+#unbind   -t vi-copy Enter
+#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
 ## Prefix+p でペースト
 bind-key p paste-buffer
 ## Esc キーでコピーの反転を解除（コピーモードは抜けない）
