--- a/.tmux.conf
+++ b/.tmux.conf
@@ -122,10 +122,23 @@ bind-key p paste-buffer
 #bind-key -t vi-copy C-u 　　scroll-up
 #bind-key -t vi-copy C-d 　　scroll-down
 
+
+# ステータスバーの色
+set -g status-fg white
+set -g status-bg black
+# ステータスバーの位置
+set-option -g status-position bottom
+# 左パネルを設定する
+set -g status-left-length 40
+set -g status-left "#[fg=cyan]Session : #S  "
+# 右パネルを設定する
+set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
+
 ## utf8を有効に
-set -g status on
 #set -g status-utf8 on
-set -g status-interval 2
+
+## リフレッシュの間隔を設定する(デフォルト 15秒)
+set -g status-interval 60
 ## ウインドウリストの位置
 set -g status-justify 'left'
 ### 左部分
@@ -134,12 +147,11 @@ set -g status-left-length 100
 set -g status-right-length 150
 set -g status-right "[%Y-%m-%d(%a) %H:%M]"
 ### ウインドウ
-set -g window-status-format "#[fg=colour244,bg=colour234]  #I #[fg=colour240] #[default]#W "
-set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour234,nobold]"
+#set -g window-status-format "#[fg=colour244,bg=colour234]  #I #[fg=colour240] #[default]#W "
+#set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour234,nobold]"
 
 # マウスの設定
 set-option -g mouse on
-
 
 # iTerm連携
 setw -g aggressive-resize off
