--- a/.gitconfig
+++ b/.gitconfig
@@ -30,6 +30,8 @@
   fetch-pulls = fetch origin +refs/pull/*:refs/remotes/pull/*
   # pullする前に変更を調べる
   pull-dry-run  = !"git fetch origin; B=$(git rev-parse --abbrev-ref HEAD); git diff --stat --summary ${B}..origin/${B}"
+  # 現在のブランチ名
+  current = symbolic-ref --short HEAD
   # alias一覧 TODO:動いてない
   alias = !"if test -z $1; then loop=; for k in `git config --get-regexp ^alias\\. | sort | sed -e 's/^alias\\.\\(\\S*\\).*/\\1/g'`; do echo -n $k; loop="${loop}1"; if test ${#loop} -lt 5; then echo -n '\t'; else echo; loop=; fi; done; exit; fi; git config --list | grep ^alias\\.$1= | sed -e s/^alias\\.//; exit;"
 [filter "media"]
