--- a/.gitconfig
+++ b/.gitconfig
@@ -12,7 +12,7 @@
   lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
   lga = log --graph --all --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
   tr = log --graph --pretty='format:%C(yellow)%h%Creset %s %Cgreen(%an)%Creset %Cred%d%Creset'
-  today = !git log --since=midnight --author="$(git config user.name)" --oneline
+  today = !git log --since=midnight --oneline
   n  = now --all --stat
   d = "!git branch --merged|egrep -v '\\*|develop|master'|xargs git branch -d"
   modified = diff --diff-filter=M
