--- a/.screenrc
+++ b/.screenrc
@@ -1,3 +1,4 @@
+escape ^Tt
 startup_message off
 vbell off
 
@@ -13,13 +14,12 @@ defscrollback 10000↲
 termcapinfo xterm* ti@:te@↲
 altscreen on↲↲
 ↲
-caption always '%?%F%{= gW}%:%{= Kk}%?%2n%f%07=%t%='↲
-hardstatus alwayslastline '[%m/%d %02c:%s] %{= .g}%H%{-} %L=%-w%45L>%{= g.}%n %t%{-}%+w %-17<%=%{= .y} LoadAVG[%l]'↲
+caption always '%?%F%{= cW}%:%{= Kk}%?%2n%f%07=%t%='↲
+hardstatus alwayslastline '[%m/%d %02c:%s] %{= .c}%H%{-} %L=%-w%45L>%{= ck}%n %t%{-}%+w %-17<%=%{= .y} LoadAVG[%l]'↲
 ↲
-windowlist title  '%{u .g}Num Flags Title%='↲
-windowlist string '%{.g}%3n %{.y}%f%09=%{-} %t %='↲
+windowlist title  '%{u .c}Num Flags Title%='↲
+windowlist string '%{.c}%3n %{.y}%f%09=%{-} %t %='↲
 ↲
 bind s  # 無効:入力を受け付けない
 bind x  # 無効:ロック
 
-escape ^Tt
