--- a/.tigrc
+++ b/.tigrc
@@ -24,5 +24,5 @@ bind log o !@hub browse -- commit/%(commit)
 set main-view = id date author commit-title:graph=yes,refs=yes
 
 # copy commit_id (osx)
-bind main C !@git pbcopy %(commit)
+bind main Y !@git pbcopy %(commit)
 
