--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [include]
   path = ~/.gitconfig.local
-[includeIf "gitdir:~/src/github.com"]
+[includeIf "gitdir:~/src/github.com/"]
   path = ~/src/github.com/.gitconfig
 [color]
 	ui = auto
