--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
 [alias]
   c = commit -v
   co = !git branch | peco | xargs git checkout
+  co-remote = '! f() { git fetch --depth=1 origin $1 && git checkout -b $1 FETCH_HEAD; }; f '
   cb = checkout -b
 	st = status
 	br = branch
