--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,16 @@
     "[css]": {
         "editor.tabSize": 2
     },
+    "[typescript]": {
+        "editor.formatOnSave": true,
+        "editor.formatOnPaste": true
+    },
+    "[markdown]": {
+        "editor.formatOnSave": true,
+        "editor.wordWrap": "on",
+        "editor.renderWhitespace": "all",
+        "editor.acceptSuggestionOnEnter": "off"
+    },
     "editor.rulers": [80],
     "files.insertFinalNewline": true,
     "emmet.triggerExpansionOnTab": true,
