once commentted out becase it does not run

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,10 @@
 # powerline
-source "$HOME/.anyenv/envs/pyenv/versions/3.5.2/lib/python3.5/site-packages/powerline/bindings/tmux/powerline.conf"
+# source "$HOME/.anyenv/envs/pyenv/versions/3.5.2/lib/python3.5/site-packages/powerline/bindings/tmux/powerline.conf"
 # 256色端末を使用する
 set -g default-terminal "screen-256color"
 set -g terminal-overrides 'xterm:colors=256'
 #power-lineの設定
-run-shell "powerline-daemon -q"
+# run-shell "powerline-daemon -q"
 
 # プラグイン
 set -g @shell_mode 'vi'
