use `go get -v` instead of git clone
use `.git` directory

--- a/.gitconfig
+++ b/.gitconfig
@@ -89,3 +89,5 @@
 	cookiefile = ${HOME}/.gitcookies
 [credential "https://source.developers.google.com"]
 	helper = gcloud.sh
+[url "git@gitlab.com:"]
+	insteadOf = https://gitlab.com/
