--- a/.gitconfig
+++ b/.gitconfig
@@ -10,7 +10,7 @@
 	smudge = !git-media-smudge %f
 [core]
 	excludesfile = ~/.gitignore_global
-	editor = /Applications/MacVim.app/Contents/MacOS/Vim
+  editor = vim
   pager = less
 [diff]
 	tool = diffphp
