--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule ".atom"]
 	path = .atom
 	url = git@github.com:valbeat/atom-config.git
+[submodule "karabiner"]
+	path = karabiner
+	url = git@github.com:valbeat/karabiner-config.git
