--- a/.gitmodules
+++ b/.gitmodules
@@ -2,9 +2,9 @@
     path = .vim/bundle/neobundle.vim
     url = git://github.com/Shougo/neobundle.vim.git
     ignore = dirty
-[submodule ".atom"]
-	path = .atom
-	url = git@github.com:valbeat/atom-config.git
 [submodule "karabiner"]
 	path = karabiner
 	url = git@github.com:valbeat/karabiner-config.git
+[submodule ".atom"]
+	path = .atom
+	url = https://github.com/valbeat/atom-config
