--- a/.gitmodules
+++ b/.gitmodules
@@ -2,12 +2,12 @@
     path = .vim/bundle/neobundle.vim
     url = git://github.com/Shougo/neobundle.vim.git
     ignore = dirty
-[submodule "karabiner"]
-	path = karabiner
-	url = git@github.com:valbeat/karabiner-config.git
 [submodule ".atom"]
 	path = .atom
 	url = https://github.com/valbeat/atom-config
 [submodule ".vscode"]
 	path = .vscode
 	url = git@github.com:valbeat/vscode-config.git
+[submodule "karabiner"]
+	path = .config/karabiner
+	url = git@github.com:valbeat/karabiner-config.git
