--- a/.dockerignore
+++ b/.dockerignore
@@ -8,12 +8,7 @@
 .mackup
 .config
 
-# OS generated files
-*.DS_Store
-.AppleDouble
-.LSOverride
-ehthumbs.db
-Thumbs.db
-
-# vim plugin
 .vim/dein
+.vim/bundle/neobundle.vim
+.vim/undo
+.vim/backup
