--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,13 @@
-language: c
+services:
+  - docker
+
 git:
   submodules: false
-
-os:
-  - linux
 
 before_install:
   - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
   - git submodule update --init --recursive
-
-install:
-  - make install
+  - docker build -t dotfiles-test .
 
 script:
-  - make --silent test
+  - docker run --rm dotfiles-test
