--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ before_install:
   - docker build -t dotfiles-test .
 
 script:
-  - docker run --rm dotfiles-test make test
+  # FIXME: `__zplug::job::message::red:3: character not in range`
+  - docker run --rm -it dotfiles-test zsh -c "source ~/.zshrc || source ~/.zshrc"
