--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,14 @@ git:
 before_install:
   - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
   - git submodule update --init --recursive
-  - docker build -t dotfiles-test .
+  - docker build -t ${DOCKER_IMAGE} .
 
 script:
   # FIXME: `__zplug::job::message::red:3: character not in range`
-  - docker run --rm -it dotfiles-test zsh -c "source ~/.zshrc || source ~/.zshrc"
+  - docker run --rm -it ${DOCKER_IMAGE} zsh -c "source ~/.zshrc || source ~/.zshrc"
+
+after_success:
+ - docker login -u="${DOCKER_USERNAME}" -p="${DOCKER_PASSWORD}"
+ - docker push ${DOCKER_IMAGE}:${TRAVIS_BUILD_NUMBER}
+ - docker tag ${DOCKER_IMAGE}:${TRAVIS_BUILD_NUMBER} ${DOCKER_IMAGE}:latest
+ - docker push ${DOCKER_IMAGE}:latest
