--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,9 @@ Session.vim
 # auto-generated tag files
 tags
 
+# Ignore credentials
+credentials
+
 # vim plugin
 .vim/dein
 
@@ -51,6 +54,6 @@ tags
 # Ignore configs
 .config
 .vscode
-
+.aws
 # Ignore local config
 .gitconfig.local
