--- a/.tmux.conf
+++ b/.tmux.conf
@@ -155,3 +155,7 @@ set-option -g mouse on
 
 # iTerm連携
 setw -g aggressive-resize off
+
+# Fig Tmux Integration: Enabled
+source-file ~/.fig/tmux
+# End of Fig Tmux Integration
