--- a/.gitconfig
+++ b/.gitconfig
@@ -13,7 +13,7 @@
   pager = less
   quotepath = false
 [commit]
-	verbose = true
+#	verbose = true
 [rebase]
   autosquash = true
 [merge]
@@ -33,6 +33,8 @@
   helper = gcloud.sh
 [url "git@gitlab.com:"]
   insteadOf = https://gitlab.com/
+[url "ssh://git@github.com/"]
+	insteadOf = https://github.com/
 [status]
   submoduleSummary = true
 
