--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "neobundle"]
-  path = .vim/bundle/neobundle.vim
-  url = git://github.com/Shougo/neobundle.vim.git
-  ignore = dirty
+[submodule ".vim/bundle/neobundle.vim"]
+	path = .vim/bundle/neobundle.vim
+	url = https://github.com/Shougo/neobundle.vim.git
