--- a/.github/workflows/notify-updated.yaml
+++ b/.github/workflows/notify-updated.yaml
@@ -3,7 +3,7 @@ on:
   push:
     branches: main
 jobs:
-  build:
+  Notify:
     runs-on: ubuntu-latest
     steps:
     - name: Publish GitHub dispatch event
