Add lfs settings

--- a/.gitconfig
+++ b/.gitconfig
@@ -142,3 +142,8 @@
 
   gca = !"rm -f .git/objects/*/tmp_* && rm -f .git/objects/*/.tmp-*; git gc --aggressive --prune=now || rm -f .git/objects/*/tmp_* && rm -f .git/objects/*/.tmp-*"
  
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
