update git config

--- a/.gitconfig
+++ b/.gitconfig
@@ -147,3 +147,6 @@
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
 	required = true
+[user]
+	name = Takuma Kajikawa
+	email = kj1ktk@gmail.com
