chore: Git エイリアス `ca` を追加
Git エイリアスに `ca` を追加しました。このエイリアスは、`git diff --cached` の出力をもとに `aichat` を使ってコミットメッセージを自動生成し、そのメッセージを用いて `git commit` を実行します。この機能を活用することで、よりスムーズにコミットメッセージを作成し、コミットプロセスを効率化できます。

--- a/.gitconfig
+++ b/.gitconfig
@@ -44,7 +44,11 @@
 	textconv = sops -d
 
 [alias]
+
   c = commit -v
+  # commit messageの自動生成つきcommit
+  ca=!git diff --cached | aichat -r commit-message | git commit -F -
+
   s = switch
   sc = switch -c
   st = status
