chore: 改良された自動コミットメッセージ生成コマンド
`ca` コマンドを改善し、一時ファイルを使用してコミットメッセージを作成。
これにより、メッセージを編集するオプション (-e) を追加し、ユーザー体験を向上。

--- a/.gitconfig
+++ b/.gitconfig
@@ -47,7 +47,7 @@
 
   c = commit -v
   # commit messageの自動生成つきcommit
-  ca=!git diff --cached | aichat -r commit-message | git commit -F -
+  ca=!TMP_MSG=/tmp/git_commit_msg; git diff --cached | aichat -r commit-message > $TMP_MSG && git commit -v -e -F $TMP_MSG
 
   s = switch
   sc = switch -c
