--- a/.gitconfig
+++ b/.gitconfig
@@ -109,10 +109,7 @@
   sorttime = "!git for-each-ref --sort='-authordate:iso8601' --format=' %(authordate:iso8601)%09%(refname)' refs/heads"
 
   # TODOコメント表示
-  todo = !"git diff origin/master...HEAD | grep -E 'TODO' -C5"
-
-  # FIXMEコメント表示(TODOも表示)
-  fixme = !"git diff origin/master...HEAD | grep -E 'TODO|FIXME' -C5"
+  todo = !"git diff origin/$(git symbolic-ref refs/remotes/origin/HEAD | sed 's@^refs/remotes/origin/@@')...HEAD | grep -E 'TODO' -C5"
 
   # 最近コミットしたブランチを表示
   recent = for-each-ref --format='%(refname:short)' --sort=-committerdate refs/heads
