--- a/.gitconfig
+++ b/.gitconfig
@@ -101,7 +101,10 @@
   d = "!f() { args=$@; [ -z \"$args\" ] && args=HEAD; ([ \"$args\" = \"HEAD\" ] && git status --short || git diff --name-status $args | sed 's/\t/  /') | fzf --preview \"echo {} | cut -c 4- | xargs git diff --color=always $args --\" --multi --height 90% | cut -c 4-; }; f"
 
   # ブランチを選択して削除する
-  bd = "!f() { branch=$(git branch | egrep -v '\\*|develop|master' | grep -v HEAD | fzf --preview 'echo {} | cut -c 3- | xargs git log --color=always' | cut -c 3-); git branch -d $(echo $branch | sed 's#remotes/[^/]*/##'); }; f"
+  bd = "!f() { \
+  branch=$(git branch --format='%(refname:short)' | grep -vE '^(\\*|develop|master|main)$' | fzf --preview 'git log --color=always {}'); \
+  [ -n \"$branch\" ] && git branch -d \"$branch\"; \
+}; f"
   
   modified = diff --diff-filter=M
   deleted = diff --diff-filter=D
