chore: Update branch deletion rule in .gitconfig
mainブランチを削除禁止リストから外しました。これは、特に'main'を使用していないプロジェクトで誤って削除を禁止しないために行われました。他の主要ブランチ（develop, master）は引き続き削除禁止となっています。

--- a/.gitconfig
+++ b/.gitconfig
@@ -102,7 +102,7 @@
 
   # ブランチを選択して削除する
   bd = "!f() { \
-  branch=$(git branch --format='%(refname:short)' | grep -vE '^(\\*|develop|master|main)$' | fzf --preview 'git log --color=always {}'); \
+  branch=$(git branch --format='%(refname:short)' | grep -vE '^(\\*|develop|master)$' | fzf --preview 'git log --color=always {}'); \
   [ -n \"$branch\" ] && git branch -d \"$branch\"; \
 }; f"
   
