chore: Enhance commit alias with error handling
エラー処理を追加して commit エイリアスを強化しました。aichat コマンドが失敗した場合には、手動でコミットメッセージを記述する旨のメッセージを表示します。これにより、コミットプロセスがスムーズになり、エラー発生時にも適切に対応できます。

--- a/.gitconfig
+++ b/.gitconfig
@@ -46,7 +46,14 @@
 [alias]
 
   # commit messageの自動生成つきcommit
-  c=!TMP_MSG=$(mktemp) && git diff --cached | aichat -r commit-message > "$TMP_MSG" && git commit -v -e -F "$TMP_MSG" && rm -f "$TMP_MSG"
+  c = "!f() { \
+    TMP_MSG=$(mktemp); \
+    if ! git diff --cached | aichat -r commit-message > \"$TMP_MSG\"; then \
+      echo \"# ❌ aichat failed. Please write your commit message manually.\" > \"$TMP_MSG\"; \
+    fi; \
+    git commit -v -e -F \"$TMP_MSG\"; \
+    rm -f \"$TMP_MSG\"; \
+  }; f"
   # manual commit
   cm = commit -v
 
