--- a/.gitconfig
+++ b/.gitconfig
@@ -46,13 +46,7 @@
 [alias]
   # commit messageの自動生成つきcommit
   c = "!f() { \
-    TMP_MSG=$(mktemp); \
-    PROMPT='Based on this git diff, write ONLY a commit message. No explanations, no additional text. Follow conventional commit format:\n- First line: {type}: concise summary (≤50 chars)\n- Second line: blank\n- Third line+: what changed and why'; \
-    if ! git diff --cached | claude -p \"$PROMPT\" > \"$TMP_MSG\"; then \
-      echo \"# ❌ claude failed. Please write your commit message manually.\" > \"$TMP_MSG\"; \
-    fi; \
-    git commit -v -e -F \"$TMP_MSG\"; \
-    rm -f \"$TMP_MSG\"; \
+    claude commit; \
   }; f"
   # manual commit
   cm = commit -v
