--- a/.gitconfig
+++ b/.gitconfig
@@ -45,7 +45,7 @@
 
 [alias]
   # commit messageの自動生成つきcommit
-  c = !claude commit -p
+  c = "!f() { if git diff --cached --quiet; then echo 'No staged changes to commit'; else claude commit -p; fi }; f"
   # manual commit
   cm = commit -v
 
