refactor(claude): migrate commands to skills directory structure
- Move all 16 commands from .claude/commands/ to .claude/skills/<name>/SKILL.md
- Update create-command skill to document new skills format
- Update .gitignore to track .claude/skills/ instead of .claude/commands/
- Add vercel-react-best-practices and web-design-guidelines skills

The skills format provides additional features:
- Directory structure for supporting files
- Enhanced frontmatter options (disable-model-invocation, context, etc.)
- Better organization for complex skills

--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,7 @@ credentials
 .claude/*
 !.claude/settings.json
 !.claude/CLAUDE.md
-!.claude/commands/
+!.claude/skills/
 !.claude/hooks/
 
 .gemini/*
